--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,17 +23,23 @@ jobs:
           echo "Action Triggered. Label: ${{ github.event.label.name }}"
           echo "Issue Body Start: ${{ github.event.issue.body }}"
 
-      # 2. 提取用户邮箱地址 (匹配您的 Issue 格式)
+      # 2. 提取用户邮箱地址
       - name: Extract User Email
         id: extract_email
         run: |
-          # 查找 '邮箱/手机:' 这一行来提取邮箱
-          EMAIL=$(echo "${{ github.event.issue.body }}" | grep "邮箱/手机:" | awk '{print $NF}')
+          # 使用 grep 查找包含 '邮箱/手机:' 的行，并用 sed 提取冒号后的内容
+          # sed 命令会清除所有空格、换行符和多余的字符，只留下邮箱地址
+          EMAIL=$(echo "${{ github.event.issue.body }}" | grep "邮箱/手机:" | head -1 | sed 's/.*邮箱\/手机:\s*//')
+          
+          # 进一步清理可能存在的换行或回车符
+          EMAIL=$(echo "$EMAIL" | tr -d '\n\r')
 
           if [ -z "$EMAIL" ]; then
-            echo "Error: User email not found. Check '邮箱/手机:' format."
+            echo "Error: Could not extract email. Check the Issue body format."
             exit 1
           fi
+
+          echo "Extracted Email: $EMAIL"
           echo "user_email=$EMAIL" >> $GITHUB_OUTPUT
         shell: bash
 
