--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
 # 触发条件：仅当 Issue 发生了 添加标签 的动作（而不是移除标签），并且 在这次操作之后，该 Issue 的标签列表中包含了 'resolved' 标签时，这个作业才会运行。
 on:
+  # 触发条件: 当 Issue 被编辑 (包括标签更改) 时
   issues:
     types: [labeled, unlabeled]
 
@@ -12,24 +13,50 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      # 1. 提取收件人邮箱
-      - name: 📩 Extract Email from Issue Body
-        id: extract_email
-        run: |
-          # 提取 Issue Body 的第一行
-          first_line=$(echo "${{ github.event.issue.body }}" | head -n 1)
-          # 使用正则表达式从第一行中提取邮件地址（假设邮箱在 ':', '：', ' ' 之后）
-          email=$(echo "$first_line" | grep -o -E '([a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+\.[a-zA-Z0-9_-]+)')
+      # 1. 提取收件人邮箱 (新逻辑: 根据 From 内容有条件地提取邮箱)
+    - name: 📩 Extract Email from Issue Body (Conditional)
+      id: extract_email
+      run: |
+      
+        ISSUE_BODY="${{ github.event.issue.body }}"
+
+        
+        LINE_FROM=$(echo "$ISSUE_BODY" | sed -n '2p')
+
+        
+        LINE_REPLY_TO=$(echo "$ISSUE_BODY" | sed -n '3p')
+
+        
+        TARGET_LINE=""
+
+        
+        if echo "$LINE_FROM" | grep -iq "Support"; then
           
-          if [ -z "$email" ]; then
-            echo "::error::Could not find email address in the issue body. Skipping email."
-            # 如果找不到邮件，可以设置为一个不发送的特殊值，或者直接让工作流失败
-            echo "extracted_email=no-reply@example.com" >> $GITHUB_OUTPUT
-          else
-            echo "Extracted email: $email"
-            echo "extracted_email=$email" >> $GITHUB_OUTPUT
-          fi
-        shell: bash
+          TARGET_LINE="$LINE_REPLY_TO"
+          echo "Info: 'From' field contains 'support@filomail.com'. Targeting 'Reply-To' line (Line 3)."
+        else
+          
+          TARGET_LINE="$LINE_FROM"
+          echo "Info: 'From' field does not contain 'support@filomail.com'. Targeting 'From' line (Line 2)."
+        fi
+
+       
+        EMAIL_REGEX='([a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+\.[a-zA-Z0-9_-]+)'
+
+        
+        email=$(echo "$TARGET_LINE" | grep -o -E "$EMAIL_REGEX")
+        
+        
+        if [ -z "$email" ]; then
+          echo "::error::Could not find email address in the target line: $TARGET_LINE. Skipping email."
+          echo "extracted_email=no-reply@example.com" >> "$GITHUB_OUTPUT"
+        else
+          echo "Extracted email: $email"
+          echo "extracted_email=$email" >> "$GITHUB_OUTPUT"
+        fi
+      shell: bash
+      
+    
 
       # 2. 发送 Resolved 通知邮件
       - name: ✉️ Send Resolved Notification Email
