--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# 触发条件：仅当 Issue 发生了 添加标签 的动作（而不是移除标签），并且 在这次操作之后，该 Issue 的标签列表中包含了 'resolved' 标签时，这个作业才会运行。
+# 触发条件：当 Issue 被编辑（包括标签更改）时
 on:
   issues:
     types: [labeled, unlabeled]
@@ -11,28 +11,40 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Extract Email from Issue Body (Conditional)
+      # 1. 提取收件人邮箱
+    - name: 📩 Extract Email from Issue Body (Conditional)
       id: extract_email
       run: |
+        # 1. 提取 Issue Body 完整内容
         ISSUE_BODY="${{ github.event.issue.body }}"
 
+        # 2. 提取 Issue Body 第二行
         LINE_FROM=$(echo "$ISSUE_BODY" | sed -n '2p')
+
+        # 3. 提取 Issue Body 第三行
         LINE_REPLY_TO=$(echo "$ISSUE_BODY" | sed -n '3p')
 
+        # 4. 初始化目标行变量
         TARGET_LINE=""
 
+        # 5. 检查 LINE_FROM 是否包含 "Support" (不区分大小写)
         if echo "$LINE_FROM" | grep -iq "Support"; then
+          # 如果包含 "Support"，则使用第 3 行 (Reply-To)
           TARGET_LINE="$LINE_REPLY_TO"
           echo "Info: 'From' field contains 'Support'. Targeting 'Reply-To' line (Line 3)."
         else
+          # 否则，使用第 2 行 (From)
           TARGET_LINE="$LINE_FROM"
           echo "Info: 'From' field does not contain 'Support'. Targeting 'From' line (Line 2)."
         fi
 
+        # 6. 提取邮件地址的正则表达式
         EMAIL_REGEX='([a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+\.[a-zA-Z0-9_-]+)'
 
-        email=$(echo "$TARGET_LINE" | grep -o -E "$EMAIL_REGEX")
+        # 7. 从目标行中提取邮件
+        email=$(echo "$TARGET_LINE" | grep -o -E $EMAIL_REGEX)
         
+        # 8. 检查结果并设置输出变量 ($GITHUB_OUTPUT)
         if [ -z "$email" ]; then
           echo "::error::Could not find email address in the target line: $TARGET_LINE. Skipping email."
           echo "extracted_email=no-reply@example.com" >> "$GITHUB_OUTPUT"
@@ -41,11 +53,9 @@ jobs:
           echo "extracted_email=$email" >> "$GITHUB_OUTPUT"
         fi
       shell: bash
-      
-    
 
       # 2. 发送 Resolved 通知邮件
-      - name: Send Resolved Notification Email
+      - name: ✉️ Send Resolved Notification Email
         uses: dawidd6/action-send-mail@v3
         # 仅在成功提取到邮箱后才运行
         if: success() && steps.extract_email.outputs.extracted_email != 'no-reply@example.com'
@@ -63,12 +73,13 @@ jobs:
           # ... (邮件内容配置不变) ...
           subject: "[Resolved] Issue # ${{ github.event.issue.number }}: ${{ github.event.issue.title }}"
           html_body: |
-            <p>Dear reporter，</p>
-            <p>Your submitted GitHub Issue status has been updated:</p>
+            <p>尊敬的工单提交人，</p>
+            <p>您提交的 GitHub Issue 状态已更新：</p>
             <ul>
-              <li><strong>Issue Title:</strong> <a href="${{ github.event.issue.html_url }}">${{ github.event.issue.title }}</a></li>
-              <li><strong>New status:</strong> <strong> Resolved </strong></li>
+              <li><strong>Issue 标题:</strong> <a href="${{ github.event.issue.html_url }}">${{ github.event.issue.title }}</a></li>
+              <li><strong>Issue 编号:</strong> #${{ github.event.issue.number }}</li>
+              <li><strong>新状态:</strong> <strong>已解决 (Resolved)</strong></li>
             </ul>
-            <p><strong><a href="${{ github.event.issue.html_url }}">Click here to view the Issue details.</a></strong></p>
+            <p><strong><a href="${{ github.event.issue.html_url }}">点击此处查看 Issue 详情</a></strong></p>
             <br>
-            <p>Please note: This email was sent automatically by GitHub Actions. Please do not reply directly.</p>
+            <p>请注意：此邮件由 GitHub Actions 自动化发送，请勿直接回复。</p>
